# spp

./: .gitignore  BUGS  Makefile  README  README.md  TODO  config.def.h  config.mk.acr  configure  configure.acr  main.c  meson.build  meson_options.txt  r_api.c  s_api.c  s_api.h  spp.c  spp.h
p/: acr.h  asm.h  cpp.h  mc.h  pod.h  r_strbuf.h  sh.h  spp.h  strbuf.c
t/: asm.inc  hello.asm  hello.cpp  hello.mc  hello.sh  hello.spp  nest.mc  oneliner.spp
